--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,3 +1,5 @@
+
+
 h1 {
     text-align: center;
   }
@@ -5,6 +7,20 @@ h1 {
   h2 {
     background-color: #7fff00;
     text-align: center;
-    color: #708090;
+    color: #004f9e;
+  }
+
+  h3 {
+    background-color: #ffff00;
+    color: #004f9e;
+    text-align: center;
+  }
+  
+  
+  img {
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
